; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_drawutils.c_blend_pixel16.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_drawutils.c_blend_pixel16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32*, i32, i32, i32, i32, i32, i32)* @blend_pixel16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blend_pixel16(i32* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8, i32 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  store i32* %0, i32** %11, align 8
  store i32 %1, i32* %12, align 4
  store i32 %2, i32* %13, align 4
  store i32* %3, i32** %14, align 8
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store i32 %9, i32* %20, align 4
  store i32 0, i32* %24, align 4
  %30 = load i32, i32* %16, align 4
  %31 = sub nsw i32 3, %30
  store i32 %31, i32* %25, align 4
  %32 = load i32, i32* %16, align 4
  %33 = ashr i32 7, %32
  store i32 %33, i32* %26, align 4
  %34 = load i32, i32* %16, align 4
  %35 = shl i32 1, %34
  %36 = shl i32 1, %35
  %37 = sub nsw i32 %36, 1
  store i32 %37, i32* %27, align 4
  %38 = load i32, i32* %27, align 4
  %39 = udiv i32 255, %38
  store i32 %39, i32* %28, align 4
  %40 = load i32*, i32** %11, align 8
  %41 = call i32 @AV_RL16(i32* %40)
  store i32 %41, i32* %29, align 4
  store i32 0, i32* %23, align 4
  br label %42

42:                                               ; preds = %83, %10
  %43 = load i32, i32* %23, align 4
  %44 = load i32, i32* %18, align 4
  %45 = icmp ult i32 %43, %44
  br i1 %45, label %46, label %86

46:                                               ; preds = %42
  %47 = load i32, i32* %20, align 4
  store i32 %47, i32* %21, align 4
  store i32 0, i32* %22, align 4
  br label %48

48:                                               ; preds = %75, %46
  %49 = load i32, i32* %22, align 4
  %50 = load i32, i32* %17, align 4
  %51 = icmp ult i32 %49, %50
  br i1 %51, label %52, label %78

52:                                               ; preds = %48
  %53 = load i32*, i32** %14, align 8
  %54 = load i32, i32* %21, align 4
  %55 = load i32, i32* %25, align 4
  %56 = lshr i32 %54, %55
  %57 = zext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %53, i64 %57
  %59 = load i32, i32* %58, align 4
  %60 = load i32, i32* %21, align 4
  %61 = xor i32 %60, -1
  %62 = load i32, i32* %26, align 4
  %63 = and i32 %61, %62
  %64 = load i32, i32* %16, align 4
  %65 = shl i32 %63, %64
  %66 = lshr i32 %59, %65
  %67 = load i32, i32* %27, align 4
  %68 = and i32 %66, %67
  %69 = load i32, i32* %28, align 4
  %70 = mul i32 %68, %69
  %71 = load i32, i32* %24, align 4
  %72 = add i32 %71, %70
  store i32 %72, i32* %24, align 4
  %73 = load i32, i32* %21, align 4
  %74 = add i32 %73, 1
  store i32 %74, i32* %21, align 4
  br label %75

75:                                               ; preds = %52
  %76 = load i32, i32* %22, align 4
  %77 = add i32 %76, 1
  store i32 %77, i32* %22, align 4
  br label %48

78:                                               ; preds = %48
  %79 = load i32, i32* %15, align 4
  %80 = load i32*, i32** %14, align 8
  %81 = sext i32 %79 to i64
  %82 = getelementptr inbounds i32, i32* %80, i64 %81
  store i32* %82, i32** %14, align 8
  br label %83

83:                                               ; preds = %78
  %84 = load i32, i32* %23, align 4
  %85 = add i32 %84, 1
  store i32 %85, i32* %23, align 4
  br label %42

86:                                               ; preds = %42
  %87 = load i32, i32* %24, align 4
  %88 = load i32, i32* %19, align 4
  %89 = lshr i32 %87, %88
  %90 = load i32, i32* %13, align 4
  %91 = mul i32 %89, %90
  store i32 %91, i32* %13, align 4
  %92 = load i32*, i32** %11, align 8
  %93 = load i32, i32* %13, align 4
  %94 = sub i32 65537, %93
  %95 = load i32, i32* %29, align 4
  %96 = mul i32 %94, %95
  %97 = load i32, i32* %13, align 4
  %98 = load i32, i32* %12, align 4
  %99 = mul i32 %97, %98
  %100 = add i32 %96, %99
  %101 = lshr i32 %100, 16
  %102 = call i32 @AV_WL16(i32* %92, i32 %101)
  ret void
}

declare dso_local i32 @AV_RL16(i32*) #1

declare dso_local i32 @AV_WL16(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
